# parable-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  test_asset_registry.json
.ccls-cache/@@home@corey@Documents@parable-engine/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@clock_t.h.blob  (+143 more)
Parable/: CMakeLists.txt
Parable/src/: CMakeLists.txt  Parable.h  pblpch.h
Parable/src/Asset/: Asset.cpp  Asset.h  AssetDescriptor.h  AssetHandle.cpp  AssetHandle.h  AssetLoadInfo.cpp  AssetLoadInfo.h  AssetRegistry.cpp  AssetRegistry.h  AssetState.h  AssetStore.h  EffectLoadInfo.cpp  EffectLoadInfo.h  Handle.cpp  Handle.h  MaterialLoadInfo.cpp  MaterialLoadInfo.h  ResourceState.h
Parable/src/Core/: Application.cpp  Application.h  Assert.h  Base.h  CMakeLists.txt  EntryPoint.h  KeyCode.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Time.cpp  Time.h
Parable/src/Debug/: EventLogLayer.cpp  EventLogLayer.h
Parable/src/ECS/: Archetype.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  Entity.h  EntityComponentMap.cpp  EntityComponentMap.h  EntityManager.cpp  EntityManager.h  IComponent.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h
Parable/src/Events/: CMakeLists.txt  Event.h  EventBuffer.cpp  EventBuffer.h  InputEvent.h  WindowEvent.h
Parable/src/Exception/: ECSExceptions.h  Exception.h  LogicExceptions.h  MemoryExceptions.h
Parable/src/Input/: Axis.cpp  Axis.h  ButtonMap.cpp  ButtonMap.h  Control.cpp  Control.h  InputCodes.h  InputContext.cpp  InputContext.h  InputContextLoader.cpp  InputContextLoader.h  InputLayer.cpp  InputLayer.h  InputManager.cpp  InputManager.h
Parable/src/Input-OLD/: Axis.cpp  Axis.h  Control.cpp  Control.tpp  InputContext.cpp  InputContextLoader.h  InputLayer.cpp  InputLayer.h  InputManager.h
Parable/src/Memory/: Allocator.h  Allocator.tpp  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h
Parable/src/Platform/: PlatformDefines.h  PlatformDetection.h
Parable/src/Platform/Vulkan/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSets.cpp  DescriptorSets.h  Device.cpp  Device.h  Framebuffers.cpp  Framebuffers.h  GPU.cpp  GPU.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  MeshManager.cpp  MeshManager.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  Renderer.cpp  Renderer.h  Renderpass.cpp  Renderpass.h  ResourceStore.cpp  ResourceStore.h  ShaderLoader.cpp  ShaderLoader.h  Swapchain.cpp  Swapchain.h  UniformBufferObjects.h  Vertex.h  VulkanBase.h  VulkanExceptions.h  (+3 more)
Parable/src/Platform/Vulkan/Effect/: Effect.h  EffectData.cpp  EffectData.h  EffectLoadTask.cpp  EffectLoadTask.h  EffectPass.h  EffectStore.cpp  EffectStore.h
Parable/src/Platform/Vulkan/Loader/: LoadTask.cpp  LoadTask.h  Loader.cpp  Loader.h
Parable/src/Platform/Vulkan/Material/: Material.cpp  Material.h  Parameters.h  Pass.h  Template.h
Parable/src/Platform/Vulkan/Mesh/: Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshDataAllocator.old  MeshLoadTask.cpp  MeshLoadTask.h  MeshLoader.cpp  MeshLoader.h  MeshStateBlock.h  MeshStore.cpp  MeshStore.h
Parable/src/Platform/Vulkan/Texture/: Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  TextureLoadTask.cpp  TextureLoadTask.h  TextureStateBlock.h  TextureStore.cpp  TextureStore.h
Parable/src/Platform/Vulkan/Wrapper/: Buffer.cpp  Buffer.h  BufferSlice.h  BufferSuballocator.cpp  BufferSuballocator.h  CommandPool.h  Device.cpp  Device.h  Framebuffers.cpp  GraphicsPipeline.h  Image.cpp  Image.h  PhysicalDevice.h  Renderpass.h  SpecializationInfo.h  Swapchain.h  Vertex.h  VulkanWrapper.h
Parable/src/Render/: Handles.h  Mesh.h  RenderLayer.cpp  RenderLayer.h  Renderer.h  RendererVk.cpp  RendererVk.h  RendererVk2.cpp  RendererVk2.h
Parable/src/Render/Shaders/: shader.frag  shader.vert  vert.spv
Parable/src/Renderer/: Effect.h  Handles.h  Material.h  Mesh.h  PVD.cpp  Renderer.cpp  Renderer.h  Texture.h
Parable/src/Renderer/Models/: cuboid.mtl
Parable/src/Renderer/Shaders/: shader.frag  shader.vert  vert.spv
Parable/src/Util/: Algorithm.h  Buffer.h  DynamicBitset.cpp  DynamicBitset.h  Pointer.h  ReadFile.h  StaticBitset.h  StaticBitset.tpp  TemplateTypeID.h
Parable/src/Window/: Window.cpp  Window.h
Testapp/: CMakeLists.txt
diagrams/: Asset.puml
tests/: CMakeLists.txt  test_main.cpp
tests/include/: test_with_malloc.h
tests/test_ecs/: test_component_manager.cpp  test_component_manager.h  test_entity_manager.cpp  test_entity_manager.h  test_system_manager.cpp  test_system_manager.h
tests/test_input_system/: test_axis.cpp  test_button_map.cpp  test_button_map.h  test_control.cpp
tests/test_memory/: test_allocators.cpp  test_allocators.h
tests/test_util/: test_bitset.cpp  test_bitset.h  test_pointer.cpp
(+13 files in other folders)
